--- a/home/templates/inc/header.html
+++ b/home/templates/inc/header.html
@@ -25,7 +25,7 @@
                 <li><a href="#home" class="smooth-scroll">خانه</a></li>
                 <li><a href="#about" class="smooth-scroll">درباره ما</a></li>
                 <li><a href="#service" class="smooth-scroll">خدمات</a></li>
-                <li><a href="#portfolio" class="smooth-scroll">پروفایل</a></li>
+                <li><a href="#portfolio" class="smooth-scroll">پروژه ها</a></li>
                 <li><a href="#team" class="smooth-scroll">تیم ما</a></li>
                 <li><a href="#price" class="smooth-scroll">قیمت ها</a></li>
                 <li class="st-has-children"><a href="#blog" class="smooth-scroll">وبلاگ</a>
