--- a/home/templates/inc/header.html
+++ b/home/templates/inc/header.html
@@ -5,7 +5,7 @@
       <div class="container">
         <div class="st-main-header-in">
           <div class="st-site-branding">
-            <a href="home7#" class="st-logo-link"><img src="{%  static 'img/dark-img/logo.png' %}" alt="demo"></a>
+            <a href="{% url 'home:home' %}" class="st-logo-link"><img src="{%  static 'img/dark-img/logo.png' %}" alt="demo"></a>
           </div>
           <!-- For Site Title -->
           <!-- <span class="st-site-title">
@@ -26,7 +26,6 @@
                 <li><a href="#about" class="smooth-scroll">درباره ما</a></li>
                 <li><a href="#service" class="smooth-scroll">خدمات</a></li>
                 <li><a href="#portfolio" class="smooth-scroll">پروژه ها</a></li>
-                <li><a href="#team" class="smooth-scroll">تیم ما</a></li>
                 <li><a href="#price" class="smooth-scroll">قیمت ها</a></li>
                 <li class="st-has-children"><a href="#blog" class="smooth-scroll">وبلاگ</a>
                   <ul>
