add blog app but not complete

--- a/home/templates/home/inc/header.html
+++ b/home/templates/home/inc/header.html
@@ -27,7 +27,7 @@
                 <li><a href="#service" class="smooth-scroll">خدمات</a></li>
                 <li><a href="#portfolio" class="smooth-scroll">پروژه ها</a></li>
                 <li><a href="#price" class="smooth-scroll">قیمت ها</a></li>
-                <li class="st-has-children"><a href="#blog" class="smooth-scroll">وبلاگ</a>
+               <!-- <li class="st-has-children"><a href="#blog" class="smooth-scroll">وبلاگ</a>
                   <ul>
                     <li><a href='blog-right-sidebar'>Blog Right Sidebar</a></li>
                     <li><a href='blog-left-sidebar'>Blog Left Sidebar</a></li>
@@ -36,7 +36,7 @@
                     <li><a href='blog-details-left-sidebar'>Blog Details Left Sidebar</a></li>
                     <li><a href='blog-details-no-sidebar'>Blog Details No Sidebar</a></li>
                   </ul>
-                </li>
+                </li> -->
                 <li><a href="#contact" class="smooth-scroll">ارتباط با ما</a></li>
               </ul>
             </nav><!-- .st-nav -->
