--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,21 +1,8 @@
+{% extends 'home/base.html' %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html class="no-js" lang="fa" dir="rtl">
-<head>
-{% include 'inc/head.html' %}
-</head>
-
-<body class="st-black-version rtl">
-  <div id="st-preloader">
-    <div class="st-preloader-wave"></div>
-    <div class="st-preloader-wave"></div>
-    <div class="st-preloader-wave"></div>
-    <div class="st-preloader-wave"></div>
-    <div class="st-preloader-wave"></div>
-  </div>
-{% include 'inc/header.html' %}
-  <div class="st-content">
+{% block content %}
 
     <!-- شروع اسلایدر هیرو -->
     <div class="st-hero-slider1 owl-carousel st-owl-controler2" id="home">
@@ -530,98 +517,4 @@
     </section>
     <!-- پایان بخش خبرنامه -->
 
-    <!-- شروع بخش تماس -->
-    <section class="st-contact-wrap st-gray-bg st-section" id="contact">
-      <div class="container">
-        <div class="st-section-heading st-style2 text-center">
-          <h2>تماس با ما</h2>
-          <div class="st-seperator">
-            <div class="st-seperator-left-bar wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-            <img src="{% static '/img/dark-img/seperator-icon.png' %}" alt="demo" class="st-seperator-icon">
-            <div class="st-seperator-right-bar wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"></div>
-          </div>
-          <p>وبسایت‌های خبری و وبلاگ‌ها منابع رایج برای فیدهای وب هستند، اما فیدها همچنین <br>برای ارائه ساختار یافته استفاده می‌شوند</p>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <div id="cf-msg"></div>
-            <form action="https://limty-html.netlify.app/limty-rtl/php/mail.php" method="post" class="st-contact-form" id="cf">
-              <input type="text" placeholder="نام کامل" id="name" name="name">
-              <input type="text" placeholder="آدرس ایمیل" id="email" name="email">
-              <input type="text" placeholder="موضوع" id="subject" name="subject">
-              <textarea cols="30" rows="10" placeholder="پیام شما" id="msg" name="msg"></textarea>
-              <button class="st-btn st-style1 st-size1 st-color1" type="submit" id="submit" name="submit">ارسال پیام</button>
-            </form>
-          </div>
-          <div class="col-lg-6">
-            <div class="st-contact-info st-style1">
-              <div class="st-contact-info-in">
-                <h3 class="st-contact-info-title">اطلاعات تماس</h3>
-                <div class="st-contact-info-text">تماس مهم‌ترین بخش کسب‌وکارها است. اگر به اطلاعاتی درباره کسب‌وکار ما نیاز دارید، با اطلاعات ارائه شده زیر تماس بگیرید.</div>
-                <h3 class="st-contact-info-title">دفتر مرکزی</h3>
-                <ul>
-                  <li><i class="fas fa-map-signs"></i>۱۱۱ کامینو دل ریو سوئیت ۳۰۰ سن دیگو</li>
-                  <li><i class="fas fa-phone"></i>۰۰+ ۲۲۲- ۳۳۳ -۷۸۸۹+</li>
-                  <li><i class="fas fa-envelope"></i><a href="#">support@zambo.com</a></li>
-                  <li><i class="fas fa-globe"></i><a href="#">www.zambo.com</a></li>
-                </ul>
-              </div>
-              <div class="st-svg' %}-animation1">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="590px" height="436px">
-                  <defs>
-                  <filter filterUnits="userSpaceOnUse" id="Filter_0" x="0px" y="0px" width="590px" height="436px"  >
-                      <feOffset in="SourceAlpha" dx="0" dy="5" />
-                      <feGaussianBlur result="blurOut" stdDeviation="3.162" />
-                      <feFlood flood-color="rgb(106, 106, 106)" result="floodOut" />
-                      <feComposite operator="atop" in="floodOut" in2="blurOut" />
-                      <feComponentTransfer><feFuncA type="linear" slope="0.15"/></feComponentTransfer>
-                      <feMerge>
-                      <feMergeNode/>
-                      <feMergeNode in="SourceGraphic"/>
-                    </feMerge>
-                  </filter>
-                  </defs>
-                  <g filter="url(#Filter_0)">
-                  <path fill-rule="evenodd"  fill="rgb(31, 31, 34)"
-                   d="M359.506,400.811 C311.350,416.741 266.303,427.200 215.885,416.924 C166.065,406.770 119.155,382.030 83.358,345.883 C32.880,294.910 5.320,222.074 9.403,150.433 C11.889,106.817 27.202,61.676 61.083,34.027 C101.026,1.428 158.043,-0.486 208.701,8.960 C259.358,18.407 308.226,37.556 359.592,41.763 C414.001,46.218 473.787,34.861 519.488,64.652 C532.722,73.279 543.780,84.912 553.231,97.563 C563.583,111.419 572.219,126.797 576.587,143.532 C584.814,175.056 577.226,208.904 563.417,238.444 C538.267,292.240 493.162,335.144 441.630,364.721 C415.638,379.639 387.934,391.407 359.506,400.811 Z"/>
-                  </g>
-                </svg>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- پایان بخش تماس -->
-
-    <!-- شروع بخش نقشه -->
-    <div class="st-map-wrap">
-      <div class="st-map-bar st-flex">
-        <div class="st-map-bar-img">
-          <img src="{% static '/img/light-img/map-icon-img.png' %}" alt="demo">
-          <div class="st-map-bar-icon"><i class="fas fa-map-marker-alt"></i></div>
-        </div>
-      </div>
-      <div class="st-map-wrpa">
-        <div class="st-google-map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96652.27317354927!2d-74.33557928194516!3d40.79756494697628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3a82f1352d0dd%3A0x81d4f72c4435aab5!2sTroy+Meadows+Wetlands!5e0!3m2!1sen!2sbd!4v1563075599994!5m2!1sen!2sbd" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-    <!-- پایان بخش نقشه -->
-  </div>
-
-  <!-- شروع فوتر -->
-{% include 'inc/footer.html' %}
-  <!-- پایان فوتر -->
-
-  <!-- شروع پاپ‌آپ ویدیو -->
-  {% include 'inc/popup.html' %}
-  <!-- پایان پاپ‌آپ ویدیو -->
-
-  <!-- اسکریپت‌ها -->
-  {% include 'inc/script.html' %}
-</body>
-</html>
+{% endblock content %}
