--- a/home_app/templates/home/inc/header.html
+++ b/home_app/templates/home/inc/header.html
@@ -5,7 +5,7 @@
       <div class="container">
         <div class="st-main-header-in">
           <div class="st-site-branding">
-            <a href="{% url 'home:home' %}" class="st-logo-link"><img src="{%  static 'img/dark-img/logo.png' %}" alt="demo"></a>
+            <a href="{% url 'home_app:home_app' %}" class="st-logo-link"><img src="{%  static 'img/dark-img/logo.png' %}" alt="demo"></a>
           </div>
           <!-- For Site Title -->
           <!-- <span class="st-site-title">
